added instagram link

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     p { margin: 0; }
     p + p { margin-top: 0; }
     nav ul { list-style: none; padding: 0; margin: 0; }
+    nav li { margin-top: 0; }
+    p a, nav a { font-size: 16px; }
     a { color: inherit; text-decoration: none; }
     a:hover { text-decoration: underline; }
     a:focus-visible { outline: 2px solid currentColor; outline-offset: 2px; border-radius: 3px; }
@@ -35,6 +37,7 @@
     
     <nav>
       <ul>
+        <li><a class="u-url" href="https://www.instagram.com/t0md4n/" rel="me noopener" target="_blank">Instagram</a></li>
         <li><a class="u-url" href="https://github.com/t0md4n" rel="me noopener" target="_blank">GitHub</a></li>
       </ul>
     </nav>
