--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Thomas Daniel</title>
+  <title>Thomas W Daniel</title>
   <meta name="description" content="Thomas Daniel">
   <meta name="theme-color" content="#ffffff">
   <style>
