added adamw link

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <nav>
       <ul>
         <li><a class="u-url" href="https://github.com/t0md4n" rel="me noopener" target="_blank">GitHub</a></li>
+        <li><a class="u-url" href="https://github.com/t0md4n/fusedadamw" rel="me noopener" target="_blank">FusedAdamW</a></li>
       </ul>
     </nav>
   </main>
